# share-power

./: .gitignore  AGENTS.MD  README.md  requirements.txt
distgpu/: coordinator.py  executor.py
distgpu/compression/: __init__.py  context_parallel.py  subspace.py
distgpu/config/: __init__.py  hybrid.py
distgpu/configs/: llama_3b_3workers.yaml  llama_70b_longctx_3workers.yaml  sdxl_unet_2workers.yaml
distgpu/pipeline/: __init__.py  comm.py  executor.py  monitor.py  script_entry.py  splitter.py
distgpu/static/: index.html
scheduler/: __init__.py  auth_tokens.py  dispatcher.py  health_monitor.py  job_queue.py  state_store.py  user_store.py  worker_registry.py
worker/: .gitignore  agent.py  install_worker.ps1  install_worker.sh  requirements-base.txt  run_worker.ps1  run_worker.sh  verify_env.py  worker.py
worker/native/: .gitignore  CMakeLists.txt  install_native.ps1  install_native.sh
worker/native/src/: main.cpp
